# nix-dev

./: .tmux.conf  .zshenv  .zshrc  CLAUDE.md  Makefile  Makefile.dev  configuration.nix  flake.nix  home.nix  init.lua  init.vim  karabiner.json  mac_apps.txt  pull-configs.sh  stg-logged-commit.py
cursor/: keybindings.json  settings.json
modules/: neovim.nix  packages.nix  tmux.nix  zsh.nix
modules/nvim/: init.lua
otstack/: CLAUDE.md  Makefile  main.py  pyproject.toml  shell.nix  temp
otstack/.claude/agents/: tdd-feature-implementer.md
otstack/.claude/commands/: pr-reflection.md  pr-review-loop.md  pr-summary.md  refine-tdd-guide.md
otstack/.githooks/: pre-commit
otstack/otstack/: OtStackClient.py  PyGitHubClient.py  PyGitHubRepository.py  Repository.py  __init__.py  client.py  github_client.py
otstack/src/otstack/: BelowDryRunResult.py  BelowResult.py  Branch.py  CommandRunner.py  GitHubClient.py  GitPythonBranch.py  GitRepoDetector.py  LocalBranch.py  OtStackClient.py  PRTree.py  PullRequest.py  PyGitHubClient.py  PyGitHubPullRequest.py  PyGitHubRepository.py  Repository.py  SimpleBranch.py  SubprocessCommandRunner.py  __init__.py
otstack/src/otstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
otstack/test/otstack/: test_Branch.py  test_GitRepoDetector.py  test_OtStackClient.py  test_PRTree.py  test_PullRequest.py  test_Repository.py  test_below.py  test_main.py
otstack/test/otstack/helpers/: MockBranch.py  MockGitHubClient.py  MockGitRepoDetector.py  MockPullRequest.py  MockRepository.py  TrackingCommandRunner.py
